--- a/html/contact.html
+++ b/html/contact.html
@@ -9,6 +9,14 @@
         <link rel="stylesheet" href="../resources/CSS/styles.css" type="tex/css">
     </head>
     <body>
-        
+       <header>
+           <nav id="logo">
+               <h2>Alexander Rogers</h2>
+               <ul>
+                   <li><a href="./index.html">About me</a></li>
+                    <li><a href="#contact">contact me</a></li>
+               </ul>
+           </nav>
+       </header> 
     </body>
 </html>
