--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,16 @@
         <link rel="stylesheet" href="../resources/CSS/styles.css" type="tex/css">
     </head>
     <body>
-        
+        <header>
+            <nav id="logo">
+                <h2>Alexander Rogers</h2>
+                <ul>
+                    <li><a href="#about">About me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="./contact.html">Contact me</a></li>
+                </ul>
+            </nav>
+        </header>
     </body>
 </html>
