modifying header section to inde html file and adding header section to styles css file

--- a/html/index.html
+++ b/html/index.html
@@ -12,11 +12,18 @@
         <header>
             <nav id="logo">
                 <h2>Alexander Rogers</h2>
-                <ul>
-                    <li><a href="#about">About me</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="./contact.html">Contact me</a></li>
+                <ul class="navigation-items">
+                    <li class="navigation-items">
+                        <a href="#about">About me</a>
+                    </li>
+                    <li class="navigation-items">
+                        <a href="#projects">Projects</a></li>
+                    <li>
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li class="navigation-items">
+                        <a href="./contact.html">Contact me</a>
+                    </li>
                 </ul>
             </nav>
         </header>
