adding the projects section to the index html file and styles css file

--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,31 @@
                     <img src="../resources/Img/me.jpg" alt="Alexander Rogers" class="portrait">
                 </div>
             </section>
+            <section id="projects">
+                <h2>My Projects</h2>
+                <div class="projects">
+                    <ul>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/Responsive-Website-Design">Responsive-Website-Design.</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/Blazing-Glory-Home-Page">Blazing Glory Home Page</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/Tea-Cozy">Tea Cozy</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/number-guesser">number guesser</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/ninja-tasker">ninja tasker</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/excursion">excursion</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <script>
             const timeContainer = document.getElementById("time-container");
