adding the skills section to the index html file and styles css file

--- a/html/index.html
+++ b/html/index.html
@@ -66,6 +66,17 @@
                     </ul>
                 </div>
             </section>
+            <section id="skills">
+                <h2>Skills</h2>
+                <div id="skills-container">
+                  <ul>
+                      <li>Html-5</li>
+                      <li>CSS</li>
+                      <li>git</li>
+                      <li>github</li>
+                  </ul>
+                </div>
+              </section>
         </main>
         <script>
             const timeContainer = document.getElementById("time-container");
