--- a/html/index.html
+++ b/html/index.html
@@ -78,6 +78,9 @@
                 </div>
               </section>
         </main>
+        <footer>
+            <p>"made by Alexander Rogers."</p>
+        </footer>
         <script>
             const timeContainer = document.getElementById("time-container");
             const BIRTH_DAY = "09-24-1996";
@@ -92,6 +95,6 @@
 
             timeContainer.innerText = intlNumberFormatter.format(difference);
             }, 1000);
-        </script> 
+        </script>
     </body>
 </html>
