--- a/html/contact.html
+++ b/html/contact.html
@@ -17,6 +17,17 @@
                     <li><a href="#contact">contact me</a></li>
                </ul>
            </nav>
-       </header> 
+       </header>
+       <main id="contact">
+            <h1>Contact us</h1>
+            <P class="text-center">
+                <address>
+                    Visit us at:<a href="https://mail.google.com/">Alex Rogers</a>.<br>
+                    3960 southpointe Dr., Orlando, FL 32822<br>
+                    USA <br>
+                    phone: 402-669-4072 <br>
+                </address>
+            </P>
+        </main>
     </body>
 </html>
