adding two new projects

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,12 @@
                         <li>
                             <a href="https://github.com/Alexander-C-Rogers/excursion">excursion</a>
                         </li>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/School_Catalogue">School_Catalogue</a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Alexander-C-Rogers/Buil_a_Library">Buil_a_Library</a>
+                        </li>
                     </ul>
                 </div>
             </section>
